add comment about preprocessing

--- a/Fakenews/Task & Evaluation/result_analysis.ipynb
+++ b/Fakenews/Task & Evaluation/result_analysis.ipynb
@@ -55,7 +55,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- collect cleaning index"
+    "- How to Collect cleaning index\n",
+    "<br>\n",
+    "<br>In our case, we observed and removed missing values by dividing the data according to length quantiles. \n",
+    "As a result, 90% of the missing values were observed in the data with the shortest length (q1).\n",
+    "<br>Therefore, although we handled it this way to preserve as much data as possible, if the goal is replication, it is also acceptable to simply remove data with lengths less than q1."
    ]
   },
   {
